@@ -15,7 +15,7 @@ A work in progress, native debugger built for *jailbroken* 64 bit iOS devices ca
 
 ## Getting started
 
-#### Instructions for compiling on iOS 12 will come when a proper jailbreak is released.
+#### Instructions for compiling and running iosdbg on iOS 12 will come when a proper jailbreak is released.
 
 #### Theos
 Skip this step if it's already installed on your device. I have been using the iOS 9.3 SDK and (currently) the iOS 11.2 SDK to build this project. If you use a different SDK, edit the Makefile.
@@ -158,6 +158,11 @@ Default focused thread is thread #1. If the focused thread goes away, the first 
 
 ### `trace`
 Trace system calls, mach system calls, and mach traps of the debuggee. Press Ctrl+C to stop.
+
+### `unset`
+Set a convenience variable's value to `void`. Syntax: `unset <convenience variable> ...`
+
+You can include as many convenience variables as you wish.
 
 ### `watch` (alias: `w`)
 Set a read, write, or read-write watchpoint. Syntax: `(w|watch) {type} <addr> <size>`
